# phd-daily-sketches

./: .gitignore  README.md
00_datasets/: SGV_12N_keyword_cooccurrences.json  asv-fragen.json  sgv-12-objects-Frau-Arbeit.json  sgv-12-objects-Frau-ArbeiterIn.json  sgv-12-objects-Mann-Arbeit.json  sgv-12-objects-Mann-ArbeiterIn.json  sgv-12-objects-about-Frau.json  sgv-12-objects-about-Mann-Frau-combined-count-pruned.json  sgv-12-objects-about-Mann-Frau-combined-count.json  sgv-12-objects-about-Mann-Frau-counted-prunned.json  sgv-12-objects-about-Mann-Frau-counted.json
00_p5_boilerplate/: sketch.js
230306_asv/: sketch.js
230307_brunner_woman/: index.html  sketch.js
230308_brunner_man/: sketch.js
230309_brunner_woman-imgs/: sketch.js
230312_brunner_bars_1/: sketch.js
230312_brunner_bars_2/: sketch.js
230312_brunner_img_parts/: sketch.js
230313_search-by-tag/: sketch.js
230314_search-by-tag_2/: index.html  sketch.js
230314_search-by-tag_3/: sketch.js
230314_search-by-tag_4/: sketch.js
230316_molnar_tags/: sketch.js
230317_drawing273/: sketch.js
230322_ml5_detection/: index.html  sketch.js
230323-order-chaos/: sketch.js
230327_sculptures/: sketch.js
230404_arcs/: sketch.js
230414-line-detection/: line-detection.ipynb  pyproject.toml
230424_circlepack_asv/: index.html  sketch.js
230425_text-structures/: textstructure.ipynb
230515_co-occurances/: sketch.js
230601_threejs_clustering/: README.md  d3-three.js  index.html  package-lock.json  sampledata.json  sketch.js  test-labels-2.js  test-labels.js  test-setup.js  test-shader.js
(+19 files in other folders)
