[tool.poetry]
name = "230414-line-detection"
version = "0.1.0"
description = ""
authors = ["maxfrischknecht <info@maxfrischknecht.ch>"]
readme = "README.md"
packages = [{include = "230414_line_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
